--- a/styles.css
+++ b/styles.css
@@ -82,13 +82,15 @@ body {
 
 h1 {
     font-size: 16px;
-    color: #FFF;
+    color: #c2700c;
+    margin: 0 0 10px -10px;
 }
 
 h3 {
-    margin: 10px 0 5px 0;
-    font-size: 13px;
+    margin: 10px 0 5px -10px;
+    font-size: 14px;
     font-weight: normal;
+    color: #84b6e1;
 }
 
 hr {
@@ -127,7 +129,8 @@ input, button {
 button {
     background-color: #444;
     padding: 6px 12px;
-    box-shadow: 0 0 3px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 0 3px 3px rgba(0, 0, 0, 0.15);
+    cursor: pointer;
 }
 
 button:hover {
