--- a/css/main.css
+++ b/css/main.css
@@ -89,3 +89,8 @@ span.refresh-text {
 span.refresh-text:hover {
     border-color: #0d6efd;
 }
+
+table.table {
+    border: 1px solid #ced4da;
+    margin-bottom: 0;
+}
